==> bdring/Grbl_Esp32/Grbl_Esp32/serial.cpp <==
#include "grbl.h"
#include "commands.h"
#define RX_RING_BUFFER (RX_BUFFER_SIZE+1)
#define TX_RING_BUFFER (TX_BUFFER_SIZE+1)

void serial_init()
{
	Serial.begin(BAUD_RATE);	
	grbl_send(CLIENT_SERIAL,"\r\n"); // create some white space after ESP32 boot info
	serialCheckTaskHandle = 0;
	// create a task to check for incoming data
	xTaskCreatePinnedToCore(	serialCheckTask,    // task
													"serialCheckTask", // name for task
													8192,   // size of task stack
													NULL,   // parameters
													1, // priority
													&serialCheckTaskHandle, 
													0 // core
													); 
	
}

void serial_write(uint8_t data) {
  Serial.write((char)data);
}
