==> micromouseonline/miniGRBL/src/serial.c <==
#include "grbl.h"
#include "nuts_bolts.h"
  #include "stm32f10x.h"
  #include "core_cm3.h"
  #include "stm32f10x_usart.h"
  #include "usb_regs.h"
  #define RX_RING_BUFFER (RX_BUFFER_SIZE+1)
  #define TX_RING_BUFFER (TX_BUFFER_SIZE+1)
  #define RX_RING_BUFFER (RX_BUFFER_SIZE)
  #define TX_RING_BUFFER (TX_BUFFER_SIZE)

void serial_init() {
  GPIO_InitTypeDef GPIO_InitStructure; //Paul, Set up the input switch for USB or UART function

  RCC_APB2PeriphClockCmd(RCC_SERIALSWITCH_PORT, ENABLE);
  GPIO_InitStructure.GPIO_Speed = GPIO_Speed_2MHz;
  GPIO_InitStructure.GPIO_Mode = GPIO_Mode_IPU; // Pull up, default is USB or High input = 1
  GPIO_InitStructure.GPIO_Pin = SERIALSWITCH_BIT;
  GPIO_Init(SERIALSWITCH_PORT, &GPIO_InitStructure);

}

void serial_write(uint8_t data) {
  // Calculate next head
  uint8_t next_head = serial_tx_buffer_head + 1;

  //#ifndef USEUSB
  //	USART_SendData(USART1, data);
  //	while (!(USART1->SR & USART_FLAG_TXE));		 //
  //    return;
  //#endif
  /*
   * Autor: Paul
   * Routine to switch between USB and USART functions
   * SERIALSWITCH_BIT = 0 USB
   * SERIALSWITCH_BIT = 1 USART
   *
   */
  if (GPIO_ReadInputDataBit(SERIALSWITCH_PORT, SERIALSWITCH_BIT) == 0) { // Jumper is removed
    USART_SendData(USART1, data);
    while (!(USART1->SR & USART_FLAG_TXE));		 //
    return;
  }

  if (next_head == TX_RING_BUFFER) {
    next_head = 0;
  }

  // Wait until there is space in the buffer
  while (next_head == serial_tx_buffer_tail) {
    // TODO: Restructure st_prep_buffer() calls to be executed here during a long print.
    if (sys_rt_exec_state & EXEC_RESET) {
      return;  // Only check for abort to avoid an endless loop.
    }

  }

  // Store data and advance head
  serial_tx_buffer[serial_tx_buffer_head] = data;
  if (sys.state == STATE_CHECK_MODE) {
    memcpy_to_eeprom_with_checksum(0x20000130 + line_counter, (char*)data, 1);
    line_counter = line_counter + 1;
  }
  serial_tx_buffer_head = next_head;

#ifdef AVRTARGET
  // Enable Data Register Empty Interrupt to make sure tx-streaming is running
  UCSR0B |= (1 << UDRIE0);
#endif
}
